--- a/style.css
+++ b/style.css
@@ -43,9 +43,9 @@ html {
 body {
   max-width: 2560px;
   height: 100vh;
-  background-color: var(--bodyBg-color);
-  font-family: var(--font);
-  color: var(--bodyTxt-color);
+  background-color: var(--black);
+  font-family: var(--body-font);
+  color: var(--white);
   letter-spacing: -0.5px;
 }
 
@@ -62,7 +62,6 @@ h6 {
 
 /* Apply the 'The Godfather' font to all headings */
 h1,
-h2,
 h3,
 h4,
 h5,
@@ -263,11 +262,12 @@ img {
 /* --Promo section-- */
 .promo-section {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   background-color: var(--black);
-  padding: 2rem;
-  padding-bottom: 2rem;
+  margin: 2rem  1.5rem;
+  gap: 2rem;
 }
 
 .promo-text {
@@ -276,7 +276,6 @@ img {
 }
 
 .promo-image {
-  width: 50%;
   margin: 0;
 }
 
@@ -329,9 +328,20 @@ img {
 }
 
 @media screen and  (min-width: 768px) {
+  .promo-section {
+    flex-direction: row;
+    gap: 1rem;
+    margin: 2rem;
+  }
+  
   .promo-text {
     width: 60%;
     text-align: left;
+  }
+
+  .promo-image {
+    width: 40%;
+    margin: 0;
   }
 
   .promo-image img {
@@ -361,19 +371,21 @@ img {
   align-items: center;
   justify-content: center;
   background-color: var(--black);
-  padding: 2rem;
+  margin: 2rem 1.5rem;
 }
 
 .games-head{
   color: var(--white);
   font-size: 80px;
   font-weight: 700;
+  line-height: 5rem;
+  margin-bottom: .5rem;
 }
 
 .games-subHead{
   color: var(--white);
   font-size: 24px;
-  margin-bottom: 32px;
+  margin-bottom: 28px;
 }
 
 .games-text {
@@ -383,6 +395,10 @@ img {
 }
 
 @media screen and (min-width: 768px) {
+  .games-section{
+    margin: 2rem;
+  }
+
   .games-text {
     font-size: 28px;
   }
@@ -395,3 +411,76 @@ img {
   grid-template-columns: repeat(7, 1fr);
   padding: 2rem 0;
 }
+
+/* Devices section */
+.devices-section {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--black);
+  margin: 2rem 1.5rem;
+  gap: 2rem;
+}
+
+.devices-text{
+  width: 100%;
+}
+
+.devices-head{
+  color: var(--white);
+  font-size: 80px;
+  font-weight: 700;
+  line-height: 5rem;
+  margin-bottom: 0.5rem;
+}
+
+.devices-subHead{
+  color: var(--white);
+  font-size: 24px;
+  margin-bottom: 24px;
+}
+
+.devices-image {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+.devices-image img {
+  width: 100%;
+  height: auto;
+  max-width: 200px;
+  max-height: 250px;
+}
+
+.devices-text {
+  font-size: 16px;
+  font-weight: 400;
+  text-transform: none;
+}
+
+
+@media screen and (min-width: 768px) {
+  .devices-section{
+    flex-direction: row;
+    margin: 2rem;
+  }
+
+  .devices-text {
+    font-size: 28px;
+    width: 60%;
+  }
+
+  .devices-image{
+    width: 40%;
+  }
+
+  .devices-image img {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
+
