--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ img {
 }
 
 /* Main Content */
-.main-content{
+.main-content {
   background-color: var(--black);
 }
 
@@ -266,7 +266,7 @@ img {
   justify-content: space-between;
   align-items: center;
   background-color: var(--black);
-  margin: 2rem  1.5rem;
+  margin: 2rem 1.5rem;
   gap: 2rem;
 }
 
@@ -325,13 +325,13 @@ img {
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
 }
 
-@media screen and  (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .promo-section {
     flex-direction: row;
     gap: 1rem;
     margin: 2rem;
   }
-  
+
   .promo-text {
     width: 60%;
     text-align: left;
@@ -349,11 +349,11 @@ img {
     max-height: 100%;
   }
 
-  .promo-head{
+  .promo-head {
     font-size: 68px;
   }
 
-  .promo-subHead{
+  .promo-subHead {
     font-size: 28px;
   }
 
@@ -372,15 +372,15 @@ img {
   margin: 2rem 1.5rem;
 }
 
-.games-head{
+.games-head {
   color: var(--white);
   font-size: 80px;
   font-weight: 700;
   line-height: 5rem;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
-.games-subHead{
+.games-subHead {
   color: var(--white);
   font-size: 24px;
   margin-bottom: 28px;
@@ -393,7 +393,7 @@ img {
 }
 
 @media screen and (min-width: 768px) {
-  .games-section{
+  .games-section {
     margin: 2rem;
   }
 
@@ -403,7 +403,7 @@ img {
 }
 
 /* GAMES Images */
-.grid-images{
+.grid-images {
   background: var(--black);
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -411,11 +411,62 @@ img {
 }
 
 @media screen and (min-width: 900px) {
-  .grid-images{
+  .grid-images {
     grid-template-columns: repeat(8, 1fr);
   }
 }
-  
+
+/* Offer Section */
+.offer-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--black);
+  margin: 2rem 1.5rem;
+  gap: 2rem;
+}
+
+.offer-text {
+  width: 100%;
+  text-align: center;
+}
+
+.offer-head {
+  color: var(--white);
+  font-size: 60px;
+  font-weight: 700;
+  line-height: 3rem;
+  margin-bottom: 1.5rem;
+}
+
+.offer-subHead {
+  color: var(--white);
+  font-size: 24px;
+  margin-bottom: 24px;
+}
+
+.offer-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 2.8rem;
+  width: fit-content;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  letter-spacing: 1.5px;
+  text-align: center;
+  color: var(--white);
+  margin-top: 32px;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0 20px;
+  background-color: #c81626;
+  border-radius: 30px;
+  border: 1px solid #cdb42873;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+}
 
 /* Devices section */
 .devices-section {
@@ -428,11 +479,11 @@ img {
   gap: 2rem;
 }
 
-.devices-text{
+.devices-text {
   width: 100%;
 }
 
-.devices-head{
+.devices-head {
   color: var(--white);
   font-size: 60px;
   font-weight: 700;
@@ -440,7 +491,7 @@ img {
   margin-bottom: 1.5rem;
 }
 
-.devices-subHead{
+.devices-subHead {
   color: var(--white);
   font-size: 24px;
   margin-bottom: 24px;
@@ -465,14 +516,13 @@ img {
   text-transform: none;
 }
 
-
 @media screen and (min-width: 768px) {
-  .devices-section{
+  .devices-section {
     flex-direction: row;
     margin: 2rem;
   }
 
-  .devices-head{
+  .devices-head {
     font-size: 80px;
     line-height: 5rem;
     margin-bottom: 0.5rem;
@@ -483,7 +533,7 @@ img {
     width: 60%;
   }
 
-  .devices-image{
+  .devices-image {
     width: 40%;
   }
 
@@ -528,36 +578,36 @@ img {
   margin-bottom: 24px;
 }
 
-.reviews{
+.reviews {
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
 
-.review-flex{
+.review-flex {
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
 
-.review-wrap{
+.review-wrap {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
   height: 100%;
   min-height: 250px;
-  gap: .5rem;
+  gap: 0.5rem;
   padding: 1rem;
   background: rgb(255 255 255 / 81%);
   border-radius: 50px;
 }
 
-.empty{
+.empty {
   display: none;
 }
 
-.wrap-head{
+.wrap-head {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -566,27 +616,28 @@ img {
   width: 100%;
 }
 
-.wrap-subHead{
+.wrap-subHead {
   display: flex;
   align-items: center;
 }
 
-.profile-img{
+.profile-img {
   width: 3rem;
   height: 3rem;
-  margin-right: .75rem;
+  margin-right: 0.75rem;
   border-radius: 50%;
 }
 
-.name-date .name, .name-date .date, .review-para{
+.name-date .name,
+.name-date .date,
+.review-para {
   color: var(--black);
   font-size: 16px;
 }
 
-.star-img{
+.star-img {
   width: 3rem;
 }
-
 
 @media screen and (min-width: 768px) {
   .review-section {
@@ -597,39 +648,39 @@ img {
     font-size: 28px;
   }
 
-  .reviews{
+  .reviews {
     display: flex;
     flex-direction: row;
   }
 
-  .wrap-head{
+  .wrap-head {
     font-size: 18px;
   }
 
-  .name-date .name, .name-date .date, .review-para{
+  .name-date .name,
+  .name-date .date,
+  .review-para {
     font-size: 18px;
   }
-  
-  .empty{
+
+  .empty {
     height: 3rem;
     display: block;
   }
 
-  .profile-img{
+  .profile-img {
     width: 5rem;
     height: 5rem;
   }
 
-  .star-img{
+  .star-img {
     width: 5rem;
   }
 
-  .review-wrap{
+  .review-wrap {
     width: 380px;
   }
-
 }
-
 
 /* Payment Section */
 .payment-section {
@@ -637,7 +688,7 @@ img {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image:url(./images/body/bitcoin-slotmachine.png);
+  background-image: url(./images/body/bitcoin-slotmachine.png);
   background-repeat: no-repeat;
   background-position: right;
   background-size: cover;
