--- a/style.css
+++ b/style.css
@@ -96,10 +96,41 @@ img {
   background-size: cover;
 }
 
-/* 
-  Navbar
-  ----------------------------------------------------------
-*/
+/* ----------------Hamburger Menu-----------------*/
+.hamburger{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem 1rem;
+}
+
+.hamburger-container{
+  display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 1.25rem;
+    width: 2rem;
+    cursor: pointer;
+  }
+
+  .hamburger-line{
+    height: 2px;
+    width: 100%;
+    background-color: var(--white);
+  }
+
+  @media screen and (min-width: 768px) {
+    .hamburger{
+      display: none;
+    }
+
+    .navbar{
+      display: flex;
+    }
+  }
+    
+
+/* ----------------------------Navbar----------------------------*/
 
 /* Make the navbar and hero banner full width and flexible */
 .navbar,
@@ -110,7 +141,7 @@ img {
 
 /* Make the navbar sticky to the top of the page on larger screens */
 .navbar {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
@@ -187,10 +218,8 @@ img {
   }
 }
 
-/* 
-  Hero banner
-  ----------------------------------------------------------
-*/
+
+/* Hero banner----------------------------------------------------------*/
 
 /* Make the hero banner a fixed size */
 .hero {
@@ -266,7 +295,7 @@ img {
   justify-content: space-between;
   align-items: center;
   background-color: var(--black);
-  margin: 2rem 1.5rem;
+  margin: 3rem 1.5rem;
   gap: 2rem;
 }
 
@@ -329,7 +358,7 @@ img {
   .promo-section {
     flex-direction: row;
     gap: 1rem;
-    margin: 2rem;
+    margin: 3rem 2rem;
   }
 
   .promo-text {
@@ -369,7 +398,7 @@ img {
   align-items: center;
   justify-content: center;
   background-color: var(--black);
-  margin: 2rem 1.5rem;
+  margin: 3rem 1.5rem;
 }
 
 .games-head {
@@ -394,7 +423,7 @@ img {
 
 @media screen and (min-width: 768px) {
   .games-section {
-    margin: 2rem;
+    margin: 3rem 2rem;
   }
 
   .games-text {
@@ -423,8 +452,17 @@ img {
   align-items: center;
   justify-content: center;
   background-color: var(--black);
-  margin: 2rem 1.5rem;
+  margin: 3rem 1.5rem;
   gap: 2rem;
+}
+
+.offer-image{
+  background-image: url(./images/body/center.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 250px;
+  width: 100%;
 }
 
 .offer-text {
@@ -468,6 +506,15 @@ img {
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
 }
 
+@media screen and (min-width: 768px) {
+  .offer-section{
+    margin: 3rem 2rem;
+  }
+  .offer-image{
+    min-height: 500px;
+  }
+}
+
 /* Devices section */
 .devices-section {
   display: flex;
@@ -475,7 +522,7 @@ img {
   align-items: center;
   justify-content: center;
   background-color: var(--black);
-  margin: 2rem 1.5rem;
+  margin: 3rem 1.5rem;
   gap: 2rem;
 }
 
@@ -519,7 +566,7 @@ img {
 @media screen and (min-width: 768px) {
   .devices-section {
     flex-direction: row;
-    margin: 2rem;
+    margin: 3rem 2rem;
   }
 
   .devices-head {
@@ -555,7 +602,7 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 2rem 1.5rem;
+  padding: 3rem 1.5rem;
   gap: 2rem;
 }
 
@@ -596,7 +643,7 @@ img {
   align-items: center;
   width: 100%;
   height: 100%;
-  min-height: 250px;
+  min-height: 200px;
   gap: 0.5rem;
   padding: 1rem;
   background: rgb(255 255 255 / 81%);
@@ -641,7 +688,7 @@ img {
 
 @media screen and (min-width: 768px) {
   .review-section {
-    padding: 2rem;
+    padding: 3rem 2rem;
   }
 
   .review-text {
@@ -692,7 +739,7 @@ img {
   background-repeat: no-repeat;
   background-position: right;
   background-size: cover;
-  padding: 2rem 1.5rem;
+  padding: 3rem 1.5rem;
   gap: 2rem;
 }
 
@@ -722,7 +769,7 @@ img {
 
 @media screen and (min-width: 768px) {
   .payment-section {
-    padding: 2rem;
+    padding: 3rem;
     flex-direction: row;
     justify-content: flex-start;
   }
