--- a/style.css
+++ b/style.css
@@ -437,6 +437,7 @@ img {
 .games-head {
   color: var(--white);
   font-size: 80px;
+  text-align: center;
   line-height: 5rem;
   margin-bottom: 0.5rem;
 }
