--- a/style.css
+++ b/style.css
@@ -291,6 +291,7 @@ img {
   color: #ffffff;
   font-size: 112px;
   margin-bottom: 16px;
+  line-height: 5.5rem;
 }
 
 .fat-boss {
@@ -369,7 +370,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 2.2rem;
+  /* height: 2.2rem; */
   width: fit-content;
   font-family: "Roboto", sans-serif;
   font-size: 24px;
@@ -380,7 +381,7 @@ img {
   margin-top: 16px;
   margin-right: auto;
   margin-left: auto;
-  padding: 0 8px;
+  padding: 10px 8px;
   background-color: #c81626;
   border-radius: 8px;
   border: 1px solid #cdb42873;
@@ -579,6 +580,8 @@ img {
   height: 100%;
   margin-left: 0;
   margin-right: auto;
+  margin-bottom: 0;
+  margin-top: auto;
 }
 
 .devices-image img {
@@ -597,9 +600,7 @@ img {
 @media screen and (min-width: 768px) {
   .devices-section {
     flex-direction: row;
-    margin: 3rem 2rem;
-    gap: 2rem;
-    padding-top: 0;
+    padding-top: 3rem;
   }
 
   .devices-head {
@@ -610,6 +611,7 @@ img {
 
   .devices-text {
     font-size: 28px;
+    padding: 0 2rem 2rem;
     width: 60%;
   }
 
