--- a/style.css
+++ b/style.css
@@ -251,25 +251,54 @@ img {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  width: 4rem;
+}
+
+.selected{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 5rem;
+  height: 2rem;
+  padding: .35rem .5rem;
+  background: #ddcfcf;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.selected .fa{
+  font-size: 1.25rem;
+  color: var(--black);
+}
+
+.select-list{
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  width: 5rem;
   height: fit-content;
   padding: .5rem;
   background: #ddcfcf;
   border-radius: 8px;
 }
 
+.show{
+  display: flex;
+}
+
 .flag{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
   width: 100%;
   cursor: pointer;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   color: var(--black);
   font-weight: 400;
 }
 
+.flag a{display: flex;}
+
 .flag img{
-  height: 1.5rem;
+  height: 1.25rem;
   margin-right: .25rem;
 }
 
@@ -288,7 +317,7 @@ img {
     flex-direction: row;
   }
   .navitem{
-    margin: .5rem 0 1rem 1rem;
+    margin-left: 1rem;
   }
 }
 
