--- a/style.css
+++ b/style.css
@@ -274,8 +274,9 @@ img {
   display: none;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   width: 5rem;
-  height: fit-content;
+  height: 4rem;
   padding: .5rem;
   background: #ddcfcf;
   border-top: 1px solid var(--white);
@@ -313,9 +314,6 @@ img {
   font-size: 1rem;
   font-family: var(--body-font);
 }
-
-.pl{margin-top: .5rem;}
-
 
 
 /* Style the navbar on larger screens */
