--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ html {
 /*===========rooot==========*/
 :root {
   /* Fonts */
-  --head-font: "The Godfather", "Roboto", sans-serif;
-  --body-font: "Intro", "Roboto", sans-serif;
+  --head-font: "The Godfather", "Roboto", "Segoe UI";
+  --body-font: "Intro", "Roboto", "Segoe UI";
 
   /* Colors */
   --white: #fff;
@@ -119,7 +119,7 @@ img {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: fit-content;
+  height: 20rem;
   position: absolute;
   top: 4rem;
   padding: 1rem;
@@ -128,6 +128,7 @@ img {
   transition: 0.5s;
   justify-content: space-around;
   background: var(--black);
+  opacity: .95;
 }
 
 .active {
@@ -261,13 +262,13 @@ img {
   width: 5rem;
   height: 2rem;
   padding: .35rem .5rem;
-  background: #ddcfcf;
+  background: transparent;
   cursor: pointer;
 }
 
 .selected .fa, .selected-item .fa{
   font-size: 1.25rem;
-  color: var(--black);
+  color: var(--white);
 }
 
 .select-list, .select-dropdown{
@@ -278,8 +279,8 @@ img {
   width: 5rem;
   height: 4rem;
   padding: .5rem;
-  background: #ddcfcf;
-  border-top: 1px solid var(--white);
+  background: transparent;
+  border-top: 1px solid #fff3;
   border-radius: 0 0 8px 8px;
   position: absolute;
   top: 2rem;
@@ -299,7 +300,7 @@ img {
   align-items: center;
   width: 100%;
   cursor: pointer;
-  color: var(--black);
+  color: var(--white);
 }
 
 .flag a{display: flex;}
@@ -552,6 +553,15 @@ img {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   padding: 2rem 0;
+}
+
+.grid-images img {
+  transition: all .5s;
+  cursor: pointer;
+}
+
+.grid-images img:hover{
+  transform: scale(.9, .9);
 }
 
 @media screen and (min-width: 900px) {
