--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 8px;
+  padding: 10px;
   background-color: #ffffff;
   background-image: linear-gradient(0deg, #656262 0%, #30302f 40%, #151713 83%);
 
@@ -112,14 +112,22 @@ img {
 
 .blik-head{
   font-family: var(--body-font);
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 400;
   text-transform: uppercase;
 }
 
 .blik-logo{
-  width: 110px;
-  height: 50px;
+  width: 60px;
+  height: 25px;
+}
+
+@media screen and (min-width: 768px) {
+  .blik-section{
+    padding: 8px;
+  }
+  .blik-head{font-size: 16px;}
+  .blik-logo{width: 110px; height: 50px;}
 }
 
 /* ----------------Hamburger Menu-----------------*/
